Complete DashBoard Controller and also create swagger Api ui For that
